# robin

./: .gitattributes  3D_DEMO_ROLLBACK_PLAN.md  3D_GRAPHICS_ROADMAP.md  AI_SYSTEMS_TEST_REPORT.md  CLAUDE.md  Cargo.toml  ENGINEER_BUILD_MODE_CHECKLIST.md  ENGINEER_BUILD_MODE_ROADMAP.md  PHASE2_QA_REPORT.md  PROJECT_COMPLETION_REPORT.md  QA_CHECKPOINT_LOG.md  QA_REPORT_PHASE3_SYSTEMS.md  README.md  ROBIN_ENGINE_2_0_ROADMAP.md  ROBIN_ENHANCEMENT_PLAN.md  RUNNING_3D_DEMO.md  TODO.md  VOXEL_DEMO_CRASH_FIX_PLAN.md  advanced_tools_test.rs  ai_comprehensive_test  ai_comprehensive_test.rs  ai_performance_benchmark  ai_performance_benchmark.rs  community_beta_launch  community_beta_launch.rs  community_showcase_project  community_showcase_project.rs  construction_test  debug_stack_overflow.rs  debug_test  ecosystem_marketplace  ecosystem_marketplace.rs  educational_partnership_network  educational_partnership_network.rs  engineer_playtest  engineer_playtest.rs  engineer_standalone_test.rs  engineer_test  integration_test  integration_test.rs  (+63 more)
.claude/agents/: game-engine-architect.md  memory-maintainer.md  rust-3d-engine-debugger.md  rust-3d-qa-specialist.md  rust-game-backend-engineer.md  voxel-asset-generator.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  security.yml
benches/: ai_systems_benchmarks.rs  engine_benchmarks.rs  performance_benchmarks.rs
examples/: README_HOT_RELOAD.md  ai_system_test.rs  asset_pipeline_demo.rs  engineer_3d_demo.rs  engineer_test.rs  error_logging_demo.rs  hot_reload_demo.rs  hot_reload_tester.py  performance_optimization_showcase.rs  real_3d_window.rs  robin_3d_showcase.rs  save_load_demo.rs  scene_serialization_demo.rs  simple_3d_demo.rs  simple_ai_test.rs  simple_character_test.rs
examples/shaders/: basic.wgsl  main_3d.wgsl  particles_3d.wgsl  simple_3d.wgsl
robin_3d_demo/: Cargo.toml
robin_3d_demo/src/: main.rs  robin_3d_shader.wgsl
shaders/: voxel.wgsl
src/: lib.rs  main.rs
src/audio/: adaptive_music.rs  ambient_generation.rs  audio_mixer.rs  haptic_feedback.rs  mod.rs  sound_propagation.rs  spatial_audio.rs
src/cloud/: mod.rs
src/engine/: animation.rs  diagnostics.rs  error.rs  game_builder.rs  logging.rs  mod.rs  physics.rs  prelude.rs
src/engine/ai/: advanced_neural_architectures.rs  behavior_ai.rs  content_ai.rs  edge_ai.rs  genetic.rs  inference.rs  inference_optimization.rs  ml_framework.rs  mod.rs  model_management.rs  narrative_ai_systems.rs  neural.rs  procedural.rs  reinforcement_learning.rs  sophisticated_content_generation.rs  training.rs
src/engine/ai_advanced/: mod.rs
src/engine/ai_game/: dynamic_adaptation.rs  dynamic_adaptation_old.rs  extensions.rs  game_balancing.rs  mod.rs  player_analytics.rs  player_analytics_complex.rs  player_state_analysis.rs  player_state_analysis_old.rs  procedural_generation.rs
src/engine/ai_systems/: adaptive_systems.rs  ai_assistance.rs  content_generation.rs  decision_making.rs  learning_systems.rs  mod.rs  neural_networks.rs  npc_intelligence.rs  procedural_generation.rs
src/engine/assets/: advanced_pipeline.rs  database.rs  hot_reload.rs  hot_reload_optimized.rs  importer.rs  mod.rs  optimized_database.rs  optimized_hot_reload.rs  parallel_processor.rs  pipeline.rs  registry.rs  watcher.rs
src/engine/audio/: mod.rs
src/engine/character/: animation_system.rs  camera_controller.rs  character_physics.rs  engineer_controller.rs  mod.rs
src/engine/core/: mod.rs
src/engine/generation/: content_generators.rs  destruction.rs  mod.rs  noise.rs  pixel_scatter.rs  runtime_tools.rs  templates.rs  ui_generation.rs  voxel_system.rs
src/engine/gpu/: buffers.rs  compute.rs  integration.rs  memory.rs  mod.rs  shaders.rs  voxel_compute.rs
src/engine/graphics/: camera.rs  clustered_lighting.rs  color.rs  lighting.rs  lod.rs  mesh.rs  mod.rs  particles.rs  particles_gpu.rs  quality.rs  renderer.rs  renderer_3d.rs  shader.rs  shadow_mapping.rs  sprite.rs  ssao.rs  taa.rs  texture.rs  volumetric.rs
src/engine/immersive/: ar_systems.rs  cross_reality.rs  mod.rs  spatial_ui.rs  vr_systems.rs
src/engine/input/: mod.rs
src/engine/math/: bounds.rs  matrix.rs  mod.rs  transform.rs  vector.rs
src/engine/multiplayer/: collaboration.rs  communication.rs  conflict_resolution.rs  mod.rs  networking.rs  permissions.rs  session.rs  shared_assets.rs  synchronization.rs  version_control.rs
src/engine/npc/: ai_decision.rs  behavior_system.rs  mod.rs  personality_system.rs  routine_system.rs  social_system.rs
src/engine/performance/: background_processing.rs  benchmarks.rs  cache_management.rs  chunk_manager.rs  chunk_streaming.rs  comprehensive_monitoring.rs  enhanced_memory_management.rs  gpu_acceleration.rs  lod_system.rs  mod.rs  (+8 more)
src/examples/: audio_demo.rs  basic_window.rs  magical_demo.rs  mod.rs  physics_demo.rs  sprite_demo.rs  ui_demo.rs
src/graphics/: mod.rs
src/input/: mod.rs
src/physics/: mod.rs
src/research/: ai_world_generation.rs  bci_systems.rs  behavioral_metrics.rs  data_anonymization.rs  longitudinal_tracking.rs  mod.rs  quantum_integration.rs  research_apis.rs  study_framework.rs
tests/: README.md  ai_core_functionality_test.rs  ai_game_systems_test.rs  ai_gamebuilder_integration_test.rs  ai_stress_test.rs  comprehensive_integration_testing.rs  comprehensive_test_runner.rs  database_load_testing.rs  graphics_3d_test.rs  hot_reload_production_testing.rs  performance_load_testing.rs  phase2_memory_safety.rs  phase2_performance_validation.rs  phase2_qa_validation.rs  real_world_testing.rs  test_execution_framework.rs  ui_integration_testing.rs
tests/phase3/: asset_pipeline_tests.rs  error_handling_tests.rs  integration_tests.rs  performance_tests.rs  ui_component_tests.rs
voxel_demo/: Cargo.toml
voxel_demo/src/: main.rs
(+151 files in other folders)
