[package]
name = "robin"
version = "0.1.0"
edition = "2021"
description = "A 2D/isometric game engine built for efficiency and ease-of-use"
license = "MIT OR Apache-2.0"

[dependencies]
winit = "0.29"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.0", features = ["derive"] }
cgmath = { version = "0.18", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
fastrand = "2.0"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
rodio = "0.21.1"
directories = "5.0"
flate2 = "1.0"
# Platform abstraction dependencies
dirs = "5.0"
whoami = "1.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
which = "4.0"
paste = "1.0"
# OpenGL for rendering
gl = "0.14"
# AI and machine learning dependencies (all self-contained, no external services)
ndarray = "0.15"  # For tensor operations
smartcore = "0.3" # For ML algorithms
candle-core = { version = "0.6", optional = true } # Optional neural network framework
rayon = "1.8" # For parallel processing
nalgebra = { version = "0.32", features = ["serde-serialize"] } # For 3D math operations

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[example]]
name = "hot_reload_demo"
path = "examples/hot_reload_demo.rs"

[[example]]
name = "scene_serialization_demo"
path = "examples/scene_serialization_demo.rs"

[[example]]
name = "error_logging_demo"
path = "examples/error_logging_demo.rs"

[[example]]
name = "asset_pipeline_demo"
path = "examples/asset_pipeline_demo.rs"

[[example]]
name = "save_load_demo"
path = "examples/save_load_demo.rs"

[[example]]
name = "robin_3d_showcase"
path = "examples/robin_3d_showcase.rs"

[[example]]
name = "simple_3d_demo"
path = "examples/simple_3d_demo.rs"

[[example]]
name = "real_3d_window"
path = "real_3d_window.rs"

[[example]]
name = "interactive_3d_demo"
path = "interactive_3d_demo.rs"

[[example]]
name = "voxel_world_demo"
path = "voxel_world_demo.rs"

[[bench]]
name = "engine_benchmarks"
harness = false
