[package]
name = "robin"
version = "0.1.0"
edition = "2021"
description = "A 2D/isometric game engine built for efficiency and ease-of-use"
license = "MIT OR Apache-2.0"

[dependencies]
winit = "0.29"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.0", features = ["derive"] }
cgmath = { version = "0.18", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
fastrand = "2.0"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
rodio = "0.21.1"
directories = "5.0"
flate2 = "1.0"
# Platform abstraction dependencies
dirs = "5.0"
whoami = "1.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
which = "4.0"
paste = "1.0"
# OpenGL for rendering
gl = "0.14"
# AI and machine learning dependencies (all self-contained, no external services)
ndarray = "0.15"  # For tensor operations
smartcore = "0.3" # For ML algorithms
candle-core = { version = "0.6", optional = true } # Optional neural network framework
rayon = "1.8" # For parallel processing
nalgebra = { version = "0.32", features = ["serde-serialize"] } # For 3D math operations

# Asset pipeline dependencies for production-ready parsing
hound = "3.4"  # WAV audio file parsing
lewton = "0.10"  # OGG Vorbis decoder
md5 = "0.7"  # For file checksums

# Database dependencies for asset management
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
r2d2 = "0.8"  # Connection pooling
r2d2_sqlite = "0.24"  # SQLite connection pool

# Performance optimization dependencies
glob = "0.3"  # File pattern matching
memmap2 = "0.9"  # Memory-mapped file I/O
dashmap = "5.0"  # High-performance concurrent hash map
crossbeam-channel = "0.5"  # Lock-free channels for async processing
lru = "0.12"  # LRU cache implementation
parking_lot = "0.12"  # High-performance synchronization primitives
crossbeam = "0.8"  # Lock-free data structures
once_cell = "1.19"  # Lazy static initialization
thread_local = "1.1"  # Thread-local storage for pooling
mimalloc = { version = "0.1", default-features = false }  # High-performance allocator
ahash = "0.8"  # Fast hasher for hash maps
smallvec = "1.11"  # Stack-allocated vectors
bumpalo = "3.14"  # Bump allocator for temporary allocations
notify = "6.0"  # File watching for hot reload

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[bin]]
name = "robin_voxel_demo"
path = "robin_voxel_demo.rs"

[[example]]
name = "hot_reload_demo"
path = "examples/hot_reload_demo.rs"

[[example]]
name = "scene_serialization_demo"
path = "examples/scene_serialization_demo.rs"

[[example]]
name = "error_logging_demo"
path = "examples/error_logging_demo.rs"

[[example]]
name = "asset_pipeline_demo"
path = "examples/asset_pipeline_demo.rs"

[[example]]
name = "save_load_demo"
path = "examples/save_load_demo.rs"

[[example]]
name = "robin_3d_showcase"
path = "examples/robin_3d_showcase.rs"

[[example]]
name = "simple_3d_demo"
path = "examples/simple_3d_demo.rs"

[[example]]
name = "real_3d_window"
path = "real_3d_window.rs"

[[example]]
name = "interactive_3d_demo"
path = "interactive_3d_demo.rs"

[[example]]
name = "voxel_world_demo"
path = "voxel_world_demo.rs"

[[example]]
name = "robin_voxel_demo"
path = "robin_voxel_demo.rs"

[[bench]]
name = "engine_benchmarks"
harness = false
